# xfc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
projects/: CMakeLists.txt
projects/package/: CMakeLists.txt  app.cpp  app.h  main.cpp  package.cpp  package.h  path.cpp  path.h
shared/: CMakeLists.txt
shared/include/xfc/: app.h  filesystem.h  log.h  numeric.h  ptr.h  timer.h
shared/src/: app.cpp  filesystem.cpp  timer.cpp
